--- a/MapKitDemo.xcodeproj/xcshareddata/xcschemes/MapKitDemo.xcscheme
+++ b/MapKitDemo.xcodeproj/xcshareddata/xcschemes/MapKitDemo.xcscheme
@@ -54,6 +54,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      language = "en"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
